[package]
name = "hrt-reverse-proxy"
version = "0.1.0"
authors = ["Mark Caggiano <mcisback@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper-reverse-proxy = "0.4"
hyper = "0.12"
futures = "0.1"
serde_json = "1.0.79"
project-root = "0.2.2"
